--- a/job_seek/Client/_Imports.razor
+++ b/job_seek/Client/_Imports.razor
@@ -9,3 +9,9 @@
 @using Microsoft.JSInterop
 @using job_seek.Client
 @using job_seek.Client.Shared
+@using job_seek.Client.Components
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using job_seek.Shared.Domain
+@using job_seek.Client.Static
+@using job_seek.Client.Services
