--- a/job_seek/Client/Pages/Apps/Index.razor
+++ b/job_seek/Client/Pages/Apps/Index.razor
@@ -30,22 +30,22 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var booking in Apps)
+            @foreach (var app in Apps)
             {
             <tr>
-                <td> @booking.Id </td>
-                <td> @booking.Customer.DrivingLicense </td>
-                <td> @booking.DateCreated.Date.ToString("dd MMMM yyyy") </td>
-                <td>@(booking.DateIn != null ? (booking.DateIn.Value - booking.DateOut).TotalDays.ToString() : "To Be Determined")</td>
-                <td> @booking.Vehicle.LicensePlateNumber </td>
+                <td> @app.Id </td>
+                <td> @app.Customer.DrivingLicense </td>
+                <td> @app.DateCreated.Date.ToString("dd MMMM yyyy") </td>
+                <td>@(app.DateIn != null ? (app.DateIn.Value - app.DateOut).TotalDays.ToString() : "To Be Determined")</td>
+                <td> @app.Job.Location </td>
                 <td>
-                    <a href="/apps/view/@booking.Id" class="btn btn-primary">
+                    <a href="/apps/view/@app.Id" class="btn btn-primary">
                         <span class="oi oi-book"></span>
                     </a>
-                    <a href="/apps/edit/@booking.Id" class="btn btn-warning">
+                    <a href="/apps/edit/@app.Id" class="btn btn-warning">
                         <span class="oi oi-pencil"></span>
                     </a>
-                    <button class="btn btn-danger" @onclick="@(()=>Delete(booking.Id))">
+                    <button class="btn btn-danger" @onclick="@(()=>Delete(app.Id))">
                         <span class="oi oi-delete"></span>
                     </button>
                 </td>
@@ -76,13 +76,13 @@ else
         js.InvokeVoidAsync("DataTablesDispose", "#appsTable");
     }
 
-    async Task Delete(int bookingId)
+    async Task Delete(int appId)
     {
-        var booking = Apps.First(q => q.Id == bookingId);
-        var confirm = await js.InvokeAsync<bool>("Confirm", $"Do you want to delete {booking.Id}?");
+        var app = Apps.First(q => q.Id == appId);
+        var confirm = await js.InvokeAsync<bool>("Confirm", $"Do you want to delete {app.Id}?");
         if (confirm)
         {
-            await _client.DeleteAsync($"{Endpoints.AppsEndpoint}/{bookingId}");
+            await _client.DeleteAsync($"{Endpoints.AppsEndpoint}/{appId}");
             await OnInitializedAsync();
         }
     }
