--- a/job_seek/Client/Pages/Companys/View.razor
+++ b/job_seek/Client/Pages/Companys/View.razor
@@ -1,18 +1,18 @@
-﻿@page "/models/view/{id:int}"
+﻿@page "/companys/view/{id:int}"
 @inject HttpClient _client
 @inject NavigationManager _navManager
 
 <h3>View</h3>
 
-<FormComponent model="model" Disabled="true" />
+<FormComponent company="company" Disabled="true" />
 
 @code {
     [Parameter] public int id { get; set; }
-    Model model = new Model();
+    Company company = new Company();
 
     protected async override Task OnParametersSetAsync()
     {
-        model = await _client.GetFromJsonAsync<Model>($"{Endpoints.ModelsEndpoint}/{id}");
+        company = await _client.GetFromJsonAsync<Company>($"{Endpoints.CompanysEndpoint}/{id}");
     }
 
 }
