--- a/job_seek/Client/Pages/Jobs/View.razor
+++ b/job_seek/Client/Pages/Jobs/View.razor
@@ -1,18 +1,18 @@
-﻿@page "/vehicles/view/{id:int}"
+﻿@page "/jobs/view/{id:int}"
 @inject HttpClient _client
 @inject NavigationManager _navManager
 
 <h3>View</h3>
 
-<FormComponent vehicle="vehicle" Disabled="true" />
+<FormComponent job="job" Disabled="true" />
 
 @code {
     [Parameter] public int id { get; set; }
-    Vehicle vehicle = new Vehicle();
+    Job job = new Job();
 
     protected async override Task OnParametersSetAsync()
     {
-        vehicle = await _client.GetFromJsonAsync<Vehicle>($"{Endpoints.VehiclesEndpoint}/{id}");
+        job = await _client.GetFromJsonAsync<Job>($"{Endpoints.JobsEndpoint}/{id}");
     }
 
 }
