--- a/job_seek/Client/Pages/Jobs/Edit.razor
+++ b/job_seek/Client/Pages/Jobs/Edit.razor
@@ -1,24 +1,24 @@
-﻿@page "/vehicles/edit/{id:int}"
+﻿@page "/jobs/edit/{id:int}"
 @inject HttpClient _client
 @inject NavigationManager _navManager
 
-<h3>Edit Vehicle</h3>
+<h3>Edit Job</h3>
 
-<FormComponent ButtonText="Update" OnValidSubmit="EditVehicle" vehicle="vehicle" />
+<FormComponent ButtonText="Update" OnValidSubmit="EditJob" job="job" />
 
 @code {
     [Parameter] public int id { get; set; }
-    Vehicle vehicle = new Vehicle();
+    Job job = new Job();
 
     protected async override Task OnParametersSetAsync()
     {
-        vehicle = await _client.GetFromJsonAsync<Vehicle>($"{Endpoints.VehiclesEndpoint}/{id}");
+        job = await _client.GetFromJsonAsync<Job>($"{Endpoints.JobsEndpoint}/{id}");
     }
 
-    async Task EditVehicle()
+    async Task EditJob()
     {
-        await _client.PutAsJsonAsync($"{Endpoints.VehiclesEndpoint}/{id}", vehicle);
-        _navManager.NavigateTo("/vehicles/");
+        await _client.PutAsJsonAsync($"{Endpoints.JobsEndpoint}/{id}", job);
+        _navManager.NavigateTo("/jobs/");
     }
 }
 
