--- a/job_seek/Client/Pages/Apps/FormComponent.razor
+++ b/job_seek/Client/Pages/Apps/FormComponent.razor
@@ -62,7 +62,7 @@
 
                     {
 
-                    <option value="@customer.Id">@customer.FirstName - @customer.DrivingLicense </option>
+                    <option value="@customer.Id">@customer.FirstName - @customer.Resume </option>
 
             }
 
