--- a/job_seek/Client/FetchData.razor
+++ b/job_seek/Client/FetchData.razor
@@ -1,7 +1,7 @@
 ﻿@page "/fetchdata"
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@using CarRentalManagement.Shared
+@using job_seek.Shared
 @attribute [Authorize]
 @inject HttpClient Http
 
