--- a/job_seek/Client/Shared/NavMenu.razor
+++ b/job_seek/Client/Shared/NavMenu.razor
@@ -1,4 +1,10 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+
+@inject NavigationManager Navigation
+@inject SignOutSessionStateManager SignOutManager
+
+    <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">job_seek</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -9,26 +15,36 @@
     <ul class="nav flex-column">
        <AuthorizeView>
             <Authorized>
-        <li class="nav-item px-3">
+            <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Profile
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
+            </li>
+            <li class="nav-item px-3">
             <NavLink class="nav-link" href="search">
                 <span class="oi oi-list-rich" aria-hidden="true"></span>Start Searching
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Application">
+            </li>
+            <li class="nav-item px-3">
+            <NavLink class="nav-link" href="apps">
                 <span class="oi oi-plus" aria-hidden="true"></span> Application
             </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Resume">
-                <span class="oi oi-list-rich" aria-hidden="true"></span>Resume
+            </li>
+            <li class="nav-item px-3">
+            <NavLink class="nav-link" href="jobs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Job
             </NavLink>
-        </li>
+            </li>
+            <li class="nav-item px-3">
+            <NavLink class="nav-link" href="companys">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Company
+            </NavLink>
+            </li>
+            <li class="nav-item px-3">
+            <NavLink class="nav-link" href="staffs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Staff
+            </NavLink>
+            </li>
             </Authorized>
             <NotAuthorized>
                 <li class="nav-item px-3">
